--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     text-align: center;
   }
 }
+
 .centered-main-page-element {
   display: block;
   width: 500px;
@@ -40,7 +41,7 @@ ul {
   padding: 0px;
 }
 li,
-h3 {
+h2 {
   list-style: none;
 }
 input,
@@ -60,7 +61,7 @@ button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
+h2,
 label[for="new-task"] {
   color: #333;
   font-weight: 700;
@@ -87,7 +88,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+h2[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
