--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.aaa img {
+.aaa-image {
   width: 100%;
 }
 .aaa .more-inf {
@@ -23,7 +23,7 @@ body {
   }
 }
 
-h1 {
+.page-title {
   visibility: hidden;
   padding: 0;
   margin: 0;
@@ -43,19 +43,19 @@ h1 {
 .task-row-wrapper {
   display: flex;
 }
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
-li,
-h2 {
+.list-item,
+.title {
   list-style: none;
 }
-input,
-button{
+.input,
+.button {
   outline: none;
 }
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -64,12 +64,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h2,
-label[for="new-task"] {
+.title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -78,7 +77,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -89,22 +88,23 @@ input[type="text"] {
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
+  width: 226px;
 }
-input[type="text"]:focus {
+.input:focus {
   color: #333;
 }
 
 /* New Task */
-h2[for="new-task"] {
+.title.new-task {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.input#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -112,47 +112,48 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list-item .input,
+.checkbox,
+.name,
+.button {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.checkbox {
   margin: 0 10px;
 }
-li > label {
+.name {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
-  width: 226px;
-}
-button.delete img {
+
+.button.delete .img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button.delete .img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.list#completed-tasks .name {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list-item .input {
   display: none;
 }
 
-ul li.edit-mode input[type=text] {
+.list-item.edit-mode .input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.edit-mode label {
+.list-item.edit-mode .name {
   display: none;
 }
