--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   display: block;
   text-align: right;
 }
-.header__image {
+.header__img {
   width: 100%;
 }
 .header__link {
@@ -23,14 +23,14 @@
   }
 }
 
-.main-page__title {
+.main__title {
   visibility: hidden;
   padding: 0;
   margin: 0;
   height: 0;
 }
 
-.main-page {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -54,10 +54,10 @@
   list-style: none;
 }
 .input,
-.button {
+.btn {
   outline: none;
 }
-.button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -66,7 +66,7 @@
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-.button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
@@ -117,7 +117,7 @@
 .task__input,
 .task__checkbox,
 .task__name,
-.button {
+.btn {
   vertical-align: middle;
 }
 
@@ -131,12 +131,12 @@
   width: 226px;
 }
 
-.button__image {
+.btn__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.button__image:hover {
+.btn__img:hover {
   transform: rotateZ(0);
 }
 
